<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.country.CountryFragment">

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/shape_edt"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:text="@string/by_max_dead"
        app:layout_constraintEnd_toEndOf="@+id/edt_search"
        app:layout_constraintTop_toBottomOf="@+id/edt_search" />

    <Button
        android:id="@+id/btn_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#009688"
        android:text="@string/by_min_dead"
        app:layout_constraintEnd_toStartOf="@+id/btn_max"
        app:layout_constraintStart_toEndOf="@+id/btn_max_patients"
        app:layout_constraintTop_toBottomOf="@+id/edt_search" />

    <Button
        android:id="@+id/btn_max_patients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:text="@string/by_max_sick"
        app:layout_constraintStart_toStartOf="@+id/edt_search"
        app:layout_constraintTop_toBottomOf="@+id/edt_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_country"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_min" />
</androidx.constraintlayout.widget.ConstraintLayout>