<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.corona_final.fragments.totalData.TotalDataViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.totalData.TotalDataFragment">


        <TextView
            android:id="@+id/tv_1"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_tv"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="@string/textview" />

        <TextView
            android:id="@+id/tv_2"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_tv"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_3"
            tools:text="@string/textview" />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_tv"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_1"
            tools:text="@string/textview" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#004D40"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/total_death"
            app:layout_constraintBottom_toTopOf="@+id/tv_1"
            app:layout_constraintEnd_toEndOf="@+id/tv_1"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/tv_1" />

        <TextView
            android:id="@+id/tv_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_confirmed"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_3"
            app:layout_constraintEnd_toEndOf="@+id/tv_3"
            app:layout_constraintStart_toStartOf="@+id/tv_3" />

        <TextView
            android:id="@+id/tv_recovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_recovered"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_2"
            app:layout_constraintEnd_toEndOf="@+id/tv_2"
            app:layout_constraintStart_toStartOf="@+id/tv_2" />

        <ImageView
            android:id="@+id/img_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_refresh_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:contentDescription="@string/refresh" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_900"
            app:title="@string/corona_virus"
            app:titleTextColor="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>